Bug 516486 -  mDiscardable should be immutable - use lockImage() instead for animated images. r=joe